--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <p> Hey there, my name is Hunter McVey and I am currently a sophomore enrolled at Virginia Tech. I am majoring in public relations and plan to recieve a cognate in marketing, along with a possible minor in real estate. </p>
 <p> I have created this website so friends and family can access some of my progress here at school. You can navigate through my current courses on the left side of the page, and will see some of the basic information for the classes I'm enrolled in.</p>
 
-     <img src="mom.jpg" class="responsive" width="400" height="400" alt="Mom"/>
+     <img src="mom.JPG" class="responsive" width="400" height="400" alt="Mom"/>
      </main>
      <aside> <p>Related links</p><a href="https://vt.edu/">Enroll Here</a></p>
        <p><a href="https://www.chipotle.com"> Order my favorite meal today!</a></p>
