--- a/humansexuality.html
+++ b/humansexuality.html
@@ -11,7 +11,7 @@
   <body class="container">
    <header>Human Sexuality</header>
    <nav>Navigation
-     <p> My Classes: </p> <a href="file:///Users/huntermcvey/Desktop/visual-media/visualmedia.html"> Visual Media</a><p><a href="file:///Users/huntermcvey/Desktop/visual-media/principlespr.html"> Principles of PR</a><p><a href="file:///Users/huntermcvey/Desktop/visual-media/introthethre.html"> Intro to Theatre</a><p><a href="file:///Users/huntermcvey/Desktop/visual-media/humansexuality.html"> Human Sexuality</a><p><a href="file:///Users/huntermcvey/Desktop/visual-media/commresearch.html"> Intro to Comm Research</a> <p><a href="file:///Users/huntermcvey/Desktop/visual-media/index.html"> Home </a>
+     <p> My Classes: </p> <a href="visualmedia.html"> Visual Media</a><p><a href="principlespr.html"> Principles of PR</a><p><a href="introthethre.html"> Intro to Theatre</a><p><a href="humansexuality.html"> Human Sexuality</a><p><a href="commresearch.html"> Intro to Comm Research</a> <p><a href="index.html"> Home </a>
        </nav>
    <main>
      <h1>Laura Nelson</h1>
